--- a/public/documentation.html
+++ b/public/documentation.html
@@ -12,5 +12,132 @@
         about your favorite Movies and Directors! 
         Users will be able to create an account to save their favorites and add some info about themselves!
     </p>
+    <table style="border: 1px solid black;">
+      <!--Table Headers-->
+      <tr>
+        <th>Business Logic</th>
+        <th>URL</th>
+        <th>HTTP Method</th>
+        <th>Request Body Data Format</th>
+        <th>Response Body Data Format</th>
+      </tr>
+      <!--GET List of Movies-->
+      <tr>
+        <td>Get a list of Movies</td>
+        <td>/movies</td>
+        <td>GET</td>
+        <td>None</td>
+        <td>JSON Object holding a list of all movie titles</td>
+      </tr>
+      <!--GET data of a single movie-->
+      <tr>
+        <td>Get data of a single movie by title</td>
+        <td>/movies/[title]</td>
+        <td>GET</td>
+        <td>None</td>
+        <td>JSON Object holding a data about a single movie. Ex:
+          {
+            title: "The Avengers",
+            genre: "Action",
+            director: "Joss Whedon",
+            imageURL: "/img/the_avengers.jpg",
+            featured: "yes"
+          }
+        </td>
+      </tr>
+      <!--GET description of a Genre-->
+      <tr>
+        <td>Get description of a genre by name</td>
+        <td>/genres/[Name]</td>
+        <td>GET</td>
+        <td>None</td>
+        <td>JSON Object holding a description about a genre. Ex:
+          {
+            name: "Action",
+            description: "Movies in the action genre contain fast-paced scenes depicting exciting events.",
+          }
+        </td>
+      </tr>
+      <!--GET Director Data (IMDB)-->
+      <tr>
+        <td>Get data of a director by name</td>
+        <td>/directors/[Name]</td>
+        <td>GET</td>
+        <td>None</td>
+        <td>JSON Object holding a description about a director. Ex:
+          {
+            name: "Joss Whedon",
+            bio: "Joss Whedon is the middle of five brothers - his younger brothers are Jed Whedon and Zack Whedon. Both his father, Tom Whedon and his grandfather, John Whedon were successful television writers. Joss' mother, Lee Stearns, was a history teacher and she also wrote novels as Lee Whedon. Whedon was raised in New York and was educated at Riverdale Country School, where his mother also taught. He also attended Winchester College in England for two years, before graduating with a film degree from Wesleyan University.
+
+              After relocating to Los Angeles, Whedon landed his first TV writing job on "Roseanne", and moved on to script a season of "Parenthood". He then developed a film script which went on to become Buffy the Vampire Slayer (1992). Whedon was very unhappy with the final film - his original script was extensively re-written and made lighter in tone. After this he earned screenwriting credits on such high profile productions as Alien: Resurrection (1997) and Toy Story (1995), for which he was Oscar nominated. He also worked as a 'script doctor' on various features, notably Speed (1994).
+            
+              In 1997, Whedon had the opportunity to resurrect his character Buffy in a television series on The WB Network. This time, as showrunner and executive producer, he retained full artistic control. The series, "Buffy the Vampire Slayer" was a popular and critical hit, which ran for several seasons, the last two on UPN. Whedon also produced a spin-off series, "Angel", which was also successful. A foray in to sci-fi television followed with "Firefly", which developed a cult following, but did not stay on air long. It did find an audience on DVD and through re-runs, and a spin-off feature film Serenity (2005) was released in 2005.
+            
+              Other projects have included comic book writing, the sci-fi drama "Dollhouse" and the screenplay for Marvel blockbuster The Avengers (2012).
+              - IMDb Mini Biography By: Anonymous",
+            birth_year: 1964,
+            death_year: "n/a"
+          }
+        </td>
+      </tr>
+      <!--POST New User-->
+      <tr>
+        <td>Create new user</td>
+        <td>/users</td>
+        <td>POST</td>
+        <td>JSON object holding data about the user to add. Ex:
+          {
+            username: "spicyJalapeno99"
+            name: "Bob Jones",
+            email: "movieluvr@gmail.com",
+            bio: "I'm a huge fan of thrillers!",
+            dob: "7/21/1990"
+          }
+        </td>
+        <td>JSON object holding data about the newly created user. Ex:
+          {
+            id: 2,
+            username: "spicyJalapeno99",
+            favorites: "Lord of the Rings, Battlestar Galactica",
+            name: "Bob Jones",
+            email: "movieluvr@gmail.com",
+            bio: "I'm a huge fan of thrillers!",
+            dob: "7/21/1990"
+          }
+        </td>
+      </tr>
+      <!--PUT Update Username by ID-->
+      <tr>
+        <td>Update User Info</td>
+        <td>/users/[id]</td>
+        <td>PUT</td>
+        <td>None</td>
+        <td>Text message indicating updated username</td>
+      </tr>
+      <!--PUT Add Favorite Movies-->
+      <tr>
+        <td>Add Favorite Movies</td>
+        <td>/users/[username]/favorites/[movie]</td>
+        <td>PUT</td>
+        <td>None</td>
+        <td>Text message indicating the movie was added</td>
+      </tr>
+      <!--DELETE Remove movie from favorites by username-->
+      <tr>
+        <td>Remove Favorite Movies</td>
+        <td>/users/[username]/favorites/[movie]</td>
+        <td>Delete</td>
+        <td>None</td>
+        <td>Text message indicating the movie that was removed</td>
+      </tr>
+      <!--DELETE Deregister User by ID-->
+      <tr>
+        <td>Remove User</td>
+        <td>/users/[id]</td>
+        <td>Delete</td>
+        <td>None</td>
+        <td>Text message indicating the user was removed</td>
+      </tr>
+    </table>
   </body>
 </html>
